--- a/Project3/Kubernetes Cluster/tasks/playbook_create_vms.yml
+++ b/Project3/Kubernetes Cluster/tasks/playbook_create_vms.yml
@@ -27,7 +27,9 @@
         key_name: ChameleonHGH01
         security_groups:
                 - ENABLE_KAFKA_COUCHDB
-        timeout: 200
+                - ENABLE_K8S
+                - ENABLE_SSH
+        timeout: 500
         floating_ips:
           - "{{floating_ip_01}}"
 
@@ -42,7 +44,9 @@
         key_name: ChameleonHGH01
         security_groups:
                 - ENABLE_KAFKA_COUCHDB
-        timeout: 200
+                - ENABLE_K8S
+                - ENABLE_SSH
+        timeout: 500
         floating_ips:
           - "{{floating_ip_02}}"
 ...
