--- a/Project4/Kubernetes Cluster/Spark_K8s_StandaloneCluster/spark-master-deploy.yaml
+++ b/Project4/Kubernetes Cluster/Spark_K8s_StandaloneCluster/spark-master-deploy.yaml
@@ -27,7 +27,7 @@ spec:                     # This is the specification
         kubernetes.io/hostname: kubemaster
       containers:
         - name: spark-master       # used to name container
-          image: 129.114.25.80:5000/my-spark:latest   # this is the image in private registry
+          image: camrenhall/my-spark:latest   # this is the image in private registry
           imagePullPolicy: Always  # This forces the node to pull the image
           ports:            # Spark master port
             - containerPort: 7077  # inside it listens on this port
